7009828: Fix for 6938627 breaks visualvm monitoring when -Djava.io.tmpdir is defined

Change get_temp_directory() back to /tmp and %TEMP% like it always was and where the tools expect it to be.

Reviewed-by: phh, dcubed, kamg, alanb